# home-noteebook-api

./: main.py  pyproject.toml  requirements.txt
database/: db_manager.py
docker/: Dockerfile
restcontroller/: api.py  notes_api.py  tarefas_api.py
